src/test/deca/syntax/invalid/printlnx_variable.deca
// Description:
//    On utilise le mot printlnx comme une variable
//
// Resultats:
//    Erreur du parser ligne 11
//
// Historique:
//    Cree le 09/01/2024

{
    int printlnx = 3;
}
